--- a/views/layout/default/css/style.css
+++ b/views/layout/default/css/style.css
@@ -204,7 +204,9 @@ textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+  resize: none;
+}
 
 button,
 input {
